# db_testing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh  setup_db.py
docs/: 01_architecture_overview.md  02_setup_guide.md  03_benchmarking.md  04_custom_aggregates.md  04_docker.md  05_1024_channel_performance_plan.md  06_channel_analytics_layer.md  06_fresh_vm_runbook.md  07_docker.md  07_possible_optimisations.md
scripts/: __init__.py  aggregates.py  analytics.py  benchmark.py  connection.py  sample_data.py  schema.py  verify.py
sql/: 01_create_table.sql  01_create_table_pg16.sql  02_generate_sample.sql  02_generate_sample_pg16.sql  03_custom_aggregates.sql  03_custom_aggregates_pg16.sql  04_benchmark_queries.sql  04_benchmark_queries_pg16.sql  05_1024_channel_layout_benchmarks.sql  06_channel_analytics.sql  realtime_layout_reference.sql
