[project]
name = "db-testing"
version = "0.2.0"
description = "Scalability and performance benchmarking of high-dimensional sensor data in PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["psycopg>=3.2"]

[project.scripts]
db-testing = "main:main"

[dependency-groups]
dev = []
